[package]
name = "kaiseki"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "kaiseki-chip8",
    "kaiseki-core",
    "kaiseki-gameboy",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
clap = { version = "3", features = ["derive"] }
console-subscriber = { version = "0.1" }
eframe = { version = "0.18" }
egui = { version = "0.18" }
egui-winit = { version = "0.18" }
kaiseki-chip8 = { path = "kaiseki-chip8" }
kaiseki-core = { path = "kaiseki-core" }
kaiseki-gameboy = { path = "kaiseki-gameboy" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
