[package]
name = "kaiseki"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "kaiseki-chip8",
    "kaiseki-core",
    "kaiseki-cpu",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
console-subscriber = { version = "0.1" }
eframe = { version = "0.22" }
egui = { version = "0.22" }
egui-winit = { version = "0.22" }
kaiseki-chip8 = { path = "kaiseki-chip8" }
kaiseki-core = { path = "kaiseki-core" }
kaiseki-cpu = { path = "kaiseki-cpu" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { version = "0.1" }
tracing-flame = { version = "0.2" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies]
inferno = "0.11"