[package]
name = "kaiseki-actor-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
async-trait = "0.1"
kaiseki-actor = { path = "../kaiseki-actor", features = ["tokio"] }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["fold", "full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[[bench]]
name = "thread"
harness = false

[[bench]]
name = "tokio"
harness = false