[package]
name = "kaiseki-chip8"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
async-trait = { version = "0.1" }
bytes = { version = "1" }
futures = { version = "0.3" }
kaiseki-core = { path = "../kaiseki-core" }
thiserror = { version = "1" }
tracing = { version = "0.1" }
