[package]
name = "kaiseki-chip8"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
futures = { version = "0.3" }
kaiseki-core = { path = "../kaiseki-core" }
kaiseki-macros = { path = "../kaiseki-macros" }
rand = { version = "0.8" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
