[package]
name = "kaiseki-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24" }
egui = { version = "0.24" }
egui_extras = { version = "0.24", features = ["image"] }
egui-winit = { version = "0.24" }
kaiseki-core = { path = "../kaiseki-core" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1" }