[package]
name = "kaiseki-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", branch = "master" }
egui = { git = "https://github.com/emilk/egui.git", branch = "master" }
egui_extras = { git = "https://github.com/emilk/egui.git", branch = "master", features = ["image"] }
egui-winit = { git = "https://github.com/emilk/egui.git", branch = "master" }
kaiseki-core = { path = "../kaiseki-core" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1" }